--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,22 @@
         android:theme="@style/Theme.TMDB"
         tools:targetApi="31">
         <activity
-            android:name=".SeeAllActivity"
+            android:name=".ui.fullscreen.FullscreenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.persondetails.PersonDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.tvdetails.TvDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.seasondetails.SeasonDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.moviedetails.MovieDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.seeall.SeeAllActivity"
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
