--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -102,7 +103,6 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2:3.1.1"
     implementation "androidx.paging:paging-rxjava3:3.1.1"
     implementation "androidx.paging:paging-guava:3.1.1"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha19"
 
     // Room
     implementation "androidx.room:room-runtime:2.5.1"
@@ -117,8 +117,5 @@ dependencies {
     //Custom Views
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
-
-    // Youtube Player Api
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
 
 }
