--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     //Glide + transformation by @wasabeef
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
+    // Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
