--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id 'com.google.dagger.hilt.android' version '2.44' apply false
     id 'androidx.navigation.safeargs' version '2.5.3' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 
 }
